# stappcaptor

./: .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.md  Makefile  README.md  __init__.py  app.py  graphql_client.py  mainpage.py  page_three.py  page_two.py  pyproject.toml  requirements.txt  source_me  streamlit_app.py
tests/: __init__.py  test_app.py  test_graphql_client.py
