[project]
name = "stappcaptor"
version = "1.0.0"
description = "Streamlit App for Captor marketing site"
authors = [
    { name = "Martin Karrin", email = "martin.karrin@captor.se" },
]
maintainers = [
    { name = "Martin Karrin", email = "martin.karrin@captor.se" },
]
license = { file = "LICENSE.md" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
package-mode = false

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "Natural Language :: English",
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]

dependencies = [
    "openseries (>=1.9.2)",
    "pyjwt (>=2.10.1)",
    "streamlit (>=1.47.1)",
    "werkzeug (>=3.1.3)",
]

[project.urls]
repository = "https://github.com/CaptorAB/py-utils"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.7.1,<6.0.0"
pytest = ">=8.2.2,<9.0.0"
pytest-cov = ">=5.0.0,<7.0.0"
pytest-xdist = ">=3.3.1,<5.0.0"
ruff = ">=0.12.5"

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = [
    "venv/*",
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2
omit = [
    "**/__init__.py",
]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py310"
line-length = 87

[tool.ruff.lint]
select = ["ALL"]
allowed-confusables = ["−"]
ignore = ["COM812", "RUF001"]
fixable = ["ALL"]
mccabe = { max-complexity = 5 }
pydocstyle = { convention = "google" }
pylint = { max-args = 4, max-branches = 5, max-statements = 24 }

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:holidays.*"
]
